PBI_Expr_Antlr/output/pbiqParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:/Users/antonio/source/repos/Packer/PBI_Expr_Antlr/pbiqParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Packer2 {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class pbiqParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		FROM=1, AS=2, IN=3, WITH=4, NATIVEREFERENCENAME=5, DOT=6, AND=7, OR=8, 
		NOT=9, WHERE=10, ORDERBY=11, ASCENDING=12, DESCENDING=13, SELECT=14, SKIP_=15, 
		TOP=16, USING=17, ANYVALUE=18, DEFAULTVALUEOVERRIDESANCESTORS=19, TRANSFORM=20, 
		VIA=21, NULL=22, TRUE=23, FALSE=24, BETWEEN=25, CONTAINS=26, AS_=27, INTEGER=28, 
		DECIMAL=29, DATE=30, DATETIMESECOND=31, DATETIME=32, SINGLE_QUOTE=33, 
		LPAREN=34, COMMA=35, RPAREN=36, GT=37, GTE=38, LT=39, LTE=40, EQ=41, STRING_LITERAL=42, 
		IDENTIFIER=43, BINARY_ARITHMETIC_OPERATOR=44, WS=45;
	public const int
		RULE_query = 0, RULE_from = 1, RULE_fromElement = 2, RULE_where = 3, RULE_queryFilter = 4, 
		RULE_alias = 5, RULE_entity = 6, RULE_entity_name = 7, RULE_schema = 8, 
		RULE_expressionContainer = 9, RULE_orderby = 10, RULE_groupby = 11, RULE_skip = 12, 
		RULE_top = 13, RULE_orderbySection = 14, RULE_direction = 15, RULE_algorithm = 16, 
		RULE_select = 17, RULE_expression = 18, RULE_nonPropertyExpression = 19, 
		RULE_nonFilterExpression = 20, RULE_filterExpression = 21, RULE_sourceRefExpr = 22, 
		RULE_aggregationExpr = 23, RULE_anyValueExpr = 24, RULE_andExpr = 25, 
		RULE_betweenExpr = 26, RULE_nullEpr = 27, RULE_intExpr = 28, RULE_decimalExpr = 29, 
		RULE_datetimeExpr = 30, RULE_dateExpr = 31, RULE_datetimeSecExpr = 32, 
		RULE_containsExpr = 33, RULE_stringExpr = 34, RULE_boolExp = 35, RULE_orExpr = 36, 
		RULE_comparisonExpr = 37, RULE_propertyExpression = 38, RULE_notExpr = 39, 
		RULE_literalExpr = 40, RULE_inExpr = 41, RULE_inExprValues = 42, RULE_expressionOrExpressionList = 43, 
		RULE_arithmenticExpr = 44, RULE_orderByClause = 45, RULE_tableName = 46, 
		RULE_equalityKind = 47, RULE_left = 48, RULE_right = 49, RULE_ubound = 50, 
		RULE_lbound = 51, RULE_operator = 52;
	public static readonly string[] ruleNames = {
		"query", "from", "fromElement", "where", "queryFilter", "alias", "entity", 
		"entity_name", "schema", "expressionContainer", "orderby", "groupby", 
		"skip", "top", "orderbySection", "direction", "algorithm", "select", "expression", 
		"nonPropertyExpression", "nonFilterExpression", "filterExpression", "sourceRefExpr", 
		"aggregationExpr", "anyValueExpr", "andExpr", "betweenExpr", "nullEpr", 
		"intExpr", "decimalExpr", "datetimeExpr", "dateExpr", "datetimeSecExpr", 
		"containsExpr", "stringExpr", "boolExp", "orExpr", "comparisonExpr", "propertyExpression", 
		"notExpr", "literalExpr", "inExpr", "inExprValues", "expressionOrExpressionList", 
		"arithmenticExpr", "orderByClause", "tableName", "equalityKind", "left", 
		"right", "ubound", "lbound", "operator"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "'''", "'('", "','", 
		"')'", "'>'", "'>='", "'<'", "'<='", "'='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "FROM", "AS", "IN", "WITH", "NATIVEREFERENCENAME", "DOT", "AND", 
		"OR", "NOT", "WHERE", "ORDERBY", "ASCENDING", "DESCENDING", "SELECT", 
		"SKIP_", "TOP", "USING", "ANYVALUE", "DEFAULTVALUEOVERRIDESANCESTORS", 
		"TRANSFORM", "VIA", "NULL", "TRUE", "FALSE", "BETWEEN", "CONTAINS", "AS_", 
		"INTEGER", "DECIMAL", "DATE", "DATETIMESECOND", "DATETIME", "SINGLE_QUOTE", 
		"LPAREN", "COMMA", "RPAREN", "GT", "GTE", "LT", "LTE", "EQ", "STRING_LITERAL", 
		"IDENTIFIER", "BINARY_ARITHMETIC_OPERATOR", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "pbiqParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static pbiqParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public pbiqParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public pbiqParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class QueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FromContext from() {
			return GetRuleContext<FromContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(pbiqParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public WhereContext where() {
			return GetRuleContext<WhereContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OrderbyContext orderby() {
			return GetRuleContext<OrderbyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectContext select() {
			return GetRuleContext<SelectContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GroupbyContext groupby() {
			return GetRuleContext<GroupbyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SkipContext skip() {
			return GetRuleContext<SkipContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TopContext top() {
			return GetRuleContext<TopContext>(0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(Context, State);
		EnterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			from();
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHERE) {
				{
				State = 107;
				where();
				}
			}

			State = 111;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 110;
				orderby();
				}
				break;
			}
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SELECT) {
				{
				State = 113;
				select();
				}
			}

			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ORDERBY) {
				{
				State = 116;
				groupby();
				}
			}

			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SKIP_) {
				{
				State = 119;
				skip();
				}
			}

			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==TOP) {
				{
				State = 122;
				top();
				}
			}

			State = 125;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FromContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FROM() { return GetToken(pbiqParser.FROM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FromElementContext[] fromElement() {
			return GetRuleContexts<FromElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FromElementContext fromElement(int i) {
			return GetRuleContext<FromElementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(pbiqParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(pbiqParser.COMMA, i);
		}
		public FromContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_from; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFrom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FromContext from() {
		FromContext _localctx = new FromContext(Context, State);
		EnterRule(_localctx, 2, RULE_from);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127;
			Match(FROM);
			State = 128;
			fromElement();
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 129;
				Match(COMMA);
				State = 130;
				fromElement();
				}
				}
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FromElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AliasContext alias() {
			return GetRuleContext<AliasContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IN() { return GetToken(pbiqParser.IN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public EntityContext entity() {
			return GetRuleContext<EntityContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContainerContext expressionContainer() {
			return GetRuleContext<ExpressionContainerContext>(0);
		}
		public FromElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fromElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFromElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FromElementContext fromElement() {
		FromElementContext _localctx = new FromElementContext(Context, State);
		EnterRule(_localctx, 4, RULE_fromElement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 136;
			alias();
			State = 137;
			Match(IN);
			State = 140;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 138;
				entity();
				}
				break;
			case 2:
				{
				State = 139;
				expressionContainer();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhereContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHERE() { return GetToken(pbiqParser.WHERE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public QueryFilterContext[] queryFilter() {
			return GetRuleContexts<QueryFilterContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public QueryFilterContext queryFilter(int i) {
			return GetRuleContext<QueryFilterContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(pbiqParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(pbiqParser.COMMA, i);
		}
		public WhereContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_where; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhere(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhereContext where() {
		WhereContext _localctx = new WhereContext(Context, State);
		EnterRule(_localctx, 6, RULE_where);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142;
			Match(WHERE);
			State = 143;
			queryFilter();
			State = 148;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 144;
				Match(COMMA);
				State = 145;
				queryFilter();
				}
				}
				State = 150;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QueryFilterContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FilterExpressionContext filterExpression() {
			return GetRuleContext<FilterExpressionContext>(0);
		}
		public QueryFilterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_queryFilter; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQueryFilter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryFilterContext queryFilter() {
		QueryFilterContext _localctx = new QueryFilterContext(Context, State);
		EnterRule(_localctx, 8, RULE_queryFilter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 151;
			filterExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AliasContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(pbiqParser.IDENTIFIER, 0); }
		public AliasContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_alias; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAlias(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AliasContext alias() {
		AliasContext _localctx = new AliasContext(Context, State);
		EnterRule(_localctx, 10, RULE_alias);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 153;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntityContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Entity_nameContext entity_name() {
			return GetRuleContext<Entity_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SchemaContext schema() {
			return GetRuleContext<SchemaContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(pbiqParser.DOT, 0); }
		public EntityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entity; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntity(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntityContext entity() {
		EntityContext _localctx = new EntityContext(Context, State);
		EnterRule(_localctx, 12, RULE_entity);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 158;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				{
				State = 155;
				schema();
				State = 156;
				Match(DOT);
				}
				break;
			}
			State = 160;
			entity_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Entity_nameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(pbiqParser.IDENTIFIER, 0); }
		public Entity_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entity_name; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntity_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Entity_nameContext entity_name() {
		Entity_nameContext _localctx = new Entity_nameContext(Context, State);
		EnterRule(_localctx, 14, RULE_entity_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 162;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SchemaContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(pbiqParser.IDENTIFIER, 0); }
		public SchemaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_schema; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSchema(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SchemaContext schema() {
		SchemaContext _localctx = new SchemaContext(Context, State);
		EnterRule(_localctx, 16, RULE_schema);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 164;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContainerContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AS() { return GetToken(pbiqParser.AS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AliasContext alias() {
			return GetRuleContext<AliasContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WITH() { return GetToken(pbiqParser.WITH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NATIVEREFERENCENAME() { return GetToken(pbiqParser.NATIVEREFERENCENAME, 0); }
		public ExpressionContainerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressionContainer; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressionContainer(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContainerContext expressionContainer() {
		ExpressionContainerContext _localctx = new ExpressionContainerContext(Context, State);
		EnterRule(_localctx, 18, RULE_expressionContainer);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 166;
			expression();
			State = 169;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AS) {
				{
				State = 167;
				Match(AS);
				State = 168;
				alias();
				}
			}

			State = 173;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WITH) {
				{
				State = 171;
				Match(WITH);
				State = 172;
				Match(NATIVEREFERENCENAME);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrderbyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ORDERBY() { return GetToken(pbiqParser.ORDERBY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public OrderbySectionContext[] orderbySection() {
			return GetRuleContexts<OrderbySectionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OrderbySectionContext orderbySection(int i) {
			return GetRuleContext<OrderbySectionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(pbiqParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(pbiqParser.COMMA, i);
		}
		public OrderbyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orderby; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrderby(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrderbyContext orderby() {
		OrderbyContext _localctx = new OrderbyContext(Context, State);
		EnterRule(_localctx, 20, RULE_orderby);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 175;
			Match(ORDERBY);
			State = 176;
			orderbySection();
			State = 181;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 177;
				Match(COMMA);
				State = 178;
				orderbySection();
				}
				}
				State = 183;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GroupbyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ORDERBY() { return GetToken(pbiqParser.ORDERBY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DirectionContext[] direction() {
			return GetRuleContexts<DirectionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DirectionContext direction(int i) {
			return GetRuleContext<DirectionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(pbiqParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(pbiqParser.COMMA, i);
		}
		public GroupbyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_groupby; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGroupby(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GroupbyContext groupby() {
		GroupbyContext _localctx = new GroupbyContext(Context, State);
		EnterRule(_localctx, 22, RULE_groupby);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 184;
			Match(ORDERBY);
			State = 185;
			expression();
			State = 186;
			direction();
			State = 193;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 187;
				Match(COMMA);
				State = 188;
				expression();
				State = 189;
				direction();
				}
				}
				State = 195;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
